SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Sync_Log__c/EBizCharge_Sync_Log__c.object-meta.xml
<CustomObject>
    <label>EBizCharge Sync Log</label>
    <nameField>
        <label>EBizCharge Sync Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EBizCharge Sync Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>