SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Sync_Log__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EBizCharge Sync Logs</relationshipLabel>
    <relationshipName>EBizCharge_Sync_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>