SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Sync_Log__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>