SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Sync_Log__c/fields/AuthCode__c.field-meta.xml
<CustomField>
    <fullName>AuthCode__c</fullName>
    <label>AuthCode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>