SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Sync_Log__c/fields/DatePaid__c.field-meta.xml
<CustomField>
    <fullName>DatePaid__c</fullName>
    <label>DatePaid</label>
    <type>DateTime</type>
</CustomField>