SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Sync_Log__c/fields/EBizCharge_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Order_Type__c</fullName>
    <label>EBizCharge Order Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>