SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Sync_Log__c/fields/EBizCharge_Source__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Source__c</fullName>
    <label>EBizCharge Source</label>
    <length>30</length>
    <type>Text</type>
</CustomField>