SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Sync_Log__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>Order Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>