SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Sync_Log__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>PaymentMethod</label>
    <length>30</length>
    <type>Text</type>
</CustomField>