SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Sync_Log__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>