SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Sync_Log__c/fields/RefNum__c.field-meta.xml
<CustomField>
    <fullName>RefNum__c</fullName>
    <label>RefNum</label>
    <length>20</length>
    <type>Text</type>
</CustomField>