SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Sync_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>