SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_Sync_Log__c/fields/Upload_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Upload_Date_Time__c</fullName>
    <label>Upload Date Time</label>
    <type>DateTime</type>
</CustomField>